--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="control-group" id="nft-load-group">
             <label for="nftCollection">Collection:</label>
             <select id="nftCollection">
-                <option value="GHN">GHN </option>
-                <option value="AHC">AHC </option>
+                <option value="GHN">God Hates NFTees </option>
+                <option value="AHC">Ape Hater Club </option>
                 <!-- Add other collections here if needed -->
             </select>
             <label for="nftTokenId">Token ID:</label>
