--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
              <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
             <!-- Text Editing -->
             <div class="text-editing-row">
-                 <label for="textInput">Text:</label>
+                 <label for="textInput">Text:</label><button class="help-btn" data-help-key="custom-text" title="Text Help">?</button> {/* <-- Added Text Help Button */}
                  <input id="textInput" placeholder="Your text here" type="text"/>
                  <button id="addTextBtn">Add Text</button>
             </div>
@@ -104,7 +104,7 @@
              <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
             <!-- Image Upload -->
             <div class="file-upload-row">
-                  <label for="imageUpload">Add Img:</label>
+                  <label for="imageUpload">Add Img:</label><button class="help-btn" data-help-key="custom-image" title="Image Help">?</button> {/* <-- Added Image Help Button */}
                  <input type="file" id="imageUpload" accept="image/*"/>
                  <button id="addImageBtn">Add Image</button>
             </div>
