--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- 1. NFT Loading Area -->
     <div id="controls">
-        <div class="section-header"> <!-- Added wrapper for title + help -->
+        <div class="section-header">
             <h4>Load Your NFT</h4>
             <button class="help-btn" data-help-key="nft-load" title="How to load NFT">?</button>
         </div>
@@ -31,7 +31,6 @@
             <select id="nftCollection">
                 <option value="GHN">GHN </option>
                 <option value="AHC">AHC </option>
-                <!-- Add other collections here if needed -->
             </select>
             <label for="nftTokenId">Token ID:</label>
             <input id="nftTokenId" placeholder="e.g.: 1114" type="number"/>
@@ -40,13 +39,11 @@
         <p id="nftStatus">Select collection & ID, then load NFT.</p>
 
         <!-- 2. Sign Type Choice (Initially Hidden) -->
-         <div class="section-header hidden" id="sign-type-choice-header"> <!-- Added wrapper for title + help -->
-             <h4>Choose Sign Mode</h4>
-             <!-- No help button needed here as options are self-explanatory -->
-         </div>
+        <div class="section-header hidden" id="sign-type-choice-header">
+            <h4>Choose Sign Mode</h4>
+        </div>
         <div class="control-group hidden" id="sign-type-choice-group">
-            <!-- Removed label, using section header now -->
-            <div> <!-- Wrapper for radios -->
+            <div>
                 <input type="radio" name="signType" value="prefix" id="signTypePrefix" disabled>
                 <label for="signTypePrefix">Signs Gallery</label>
                 <input type="radio" name="signType" value="custom" id="signTypeCustom" disabled>
@@ -56,79 +53,74 @@
 
         <!-- 3. Signs Gallery Options (Initially Hidden) -->
         <div class="control-group hidden section-content" id="prefix-options-group">
-             <div class="section-header"> <!-- Added wrapper for title + help -->
-                 <h4>Signs Gallery</h4>
-                 <button class="help-btn" data-help-key="gallery" title="How to use gallery">?</button>
-             </div>
+            <div class="section-header">
+                <h4>Signs Gallery</h4>
+                <button class="help-btn" data-help-key="gallery" title="How to use gallery">?</button>
+            </div>
             <div id="sign-gallery-container">
                 <p style="font-style: italic; color: var(--portal-blue);">Loading gallery...</p>
             </div>
-            <!-- Save button specific for prefix mode -->
             <div id="prefix-final-actions">
-                 <button id="savePrefixBtn" disabled>Save Full Image</button>
+                <button id="savePrefixBtn" disabled>Save Full Image</button>
             </div>
         </div>
 
         <!-- 4. Custom Sign Options (Initially Hidden) -->
         <div class="control-group hidden section-content" id="custom-options-group">
-             <div class="section-header"> <!-- Added wrapper for title + help -->
-                 <h4>Custom Sign</h4>
-                 <button class="help-btn" data-help-key="custom" title="How to use custom sign">?</button>
-             </div>
+            <div class="section-header">
+                <h4>Custom Sign</h4>
+                <button class="help-btn" data-help-key="custom" title="How to use custom sign">?</button>
+            </div>
             <!-- Sign Color -->
             <div>
-                 <label for="overlayColor">Sign Color:</label>
-                 <input id="overlayColor" type="color" value="#00ff00"/>
+                <label for="overlayColor">Sign Color:</label>
+                <input id="overlayColor" type="color" value="#00ff00"/>
             </div>
-             <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
+            <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
             <!-- Text Editing -->
             <div class="text-editing-row">
-                 <label for="textInput">Text:</label><button class="help-btn" data-help-key="custom-text" title="Text Help">?</button> <!-- Corrected Help Button -->
-                 <input id="textInput" placeholder="Your text here" type="text"/>
-                 <button id="addTextBtn">Add Text</button>
+                <label for="textInput">Text:</label>
+                <input id="textInput" placeholder="Your text here" type="text"/>
+                <button id="addTextBtn">Add Text</button>
             </div>
             <div class="text-style-row">
-                 <label>Style:</label>
-                 <input id="textColor" type="color" value="#ffffff" title="Text Color"/>
-                 <label for="fontFamily">Font:</label>
-                 <select id="fontFamily" title="Font Family">
-                     <option value="'Comic Neue', cursive">Comic Neue</option>
-                     <option value="'Indie Flower', cursive">Indie Flower</option>
-                     <option value="'Rubik Moonrocks', cursive">Rubik Moonrocks</option>
-                     <option value="'Luckiest Guy', cursive">Luckiest Guy</option>
-                     <option value="Arial">Arial</option>
-                     <option value="Verdana">Verdana</option>
-                     <option value="Times New Roman">Times New Roman</option>
-                 </select>
+                <label>Style:</label>
+                <input id="textColor" type="color" value="#ffffff" title="Text Color"/>
+                <label for="fontFamily">Font:</label>
+                <select id="fontFamily" title="Font Family">
+                    <option value="'Comic Neue', cursive">Comic Neue</option>
+                    <option value="'Indie Flower', cursive">Indie Flower</option>
+                    <option value="'Rubik Moonrocks', cursive">Rubik Moonrocks</option>
+                    <option value="'Luckiest Guy', cursive">Luckiest Guy</option>
+                    <option value="Arial">Arial</option>
+                    <option value="Verdana">Verdana</option>
+                    <option value="Times New Roman">Times New Roman</option>
+                </select>
             </div>
-             <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
+            <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
             <!-- Image Upload -->
             <div class="file-upload-row">
-                  <label for="imageUpload">Add Img:</label><button class="help-btn" data-help-key="custom-image" title="Image Help">?</button> <!-- Corrected Help Button -->
-                 <input type="file" id="imageUpload" accept="image/*"/>
-                 <button id="addImageBtn">Add Image</button>
+                <label for="imageUpload">Add Img:</label>
+                <input type="file" id="imageUpload" accept="image/*"/>
+                <button id="addImageBtn">Add Image</button>
             </div>
-             <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
-            <!-- Custom Actions (Delete/Save) -->
+            <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
+            <!-- Custom Actions -->
             <div id="final-actions">
-                 <button id="removeBtn">Delete Selected</button>
-                 <button id="saveFullBtn">Save Full Image</button>
+                <button id="removeBtn">Delete Selected</button>
+                <button id="saveFullBtn">Save Full Image</button>
             </div>
         </div>
-
-    </div> <!-- End #controls -->
-
+    </div>
 
     <div id="canvas-container">
         <button class="floating-reset" id="resetCanvas" title="Reset Canvas & Overlays">↺</button>
         <canvas height="2048" id="canvas" width="2048"></canvas>
-        <!-- Overlays will be added here -->
     </div>
 
     <!-- Donation Button -->
     <button id="donateBtn" title="Support the project!">☕ Buy Ticuv a Virtual Coffee</button>
-
-</div> <!-- End .main-container -->
+</div>
 
 <!-- Donation Modal -->
 <div id="donateModal" class="modal">
@@ -143,8 +135,8 @@
         <div id="donateAddressDisplay" class="hidden">
             <p>Send to this address:</p>
             <div class="address-box">
-                 <code id="donateAddress"></code>
-                 <button id="copyAddressBtn" title="Copy Address">Copy</button>
+                <code id="donateAddress"></code>
+                <button id="copyAddressBtn" title="Copy Address">Copy</button>
             </div>
             <p class="modal-thanks">Thank you for your support! 🙏</p>
         </div>
@@ -155,7 +147,6 @@
 <div id="helpTooltip">
     <span id="helpTooltipText"></span>
 </div>
-
 
 <!-- Link to external JavaScript file -->
 <script src="script.js"></script>
