--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
              <hr style="width: 90%; border-color: rgba(255,255,255,0.1); margin: 6px 0;">
             <!-- Custom Actions (Delete/Save) -->
             <div id="final-actions">
-                 <button id="removeBtn">Delete Selected</button>
+                 <!-- The global "Delete Selected" button was removed from here -->
                  <button id="saveFullBtn">Save Full Image</button>
             </div>
         </div>
